@@ -1,4 +1,4 @@
-@API(owner = "Baubles", apiVersion = "1.3.0.3", provides = "Baubles|API")
+@API(owner = "Baubles", apiVersion = "1.3.0.4", provides = "Baubles|API")
 package baubles.api;
 
 import net.minecraftforge.fml.common.API;
