@@ -1,0 +1,36 @@
+package baubles.client.gui;
+
+import java.util.Set;
+
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.GuiScreen;
+import net.minecraftforge.fml.client.IModGuiFactory;
+
+public class BaublesGuiFactory implements IModGuiFactory {
+
+	@Override
+	public void initialize(Minecraft minecraftInstance) {
+		// TODO Auto-generated method stub
+
+	}
+
+	@Override
+	public Class<? extends GuiScreen> mainConfigGuiClass() {
+		return BaublesGuiConfig.class;
+
+	}
+
+	@Override
+	public Set<RuntimeOptionCategoryElement> runtimeGuiCategories() {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+	@Override
+	public RuntimeOptionGuiHandler getHandlerFor(
+			RuntimeOptionCategoryElement element) {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+}
